# os_lab

./: .clang-format  LICENSE  build.sh  clean.sh  run.sh
final/: mush  text_file.txt
final/commands/: chroot  head  nl
source/: CMakeLists.txt
source/chroot/: CMakeLists.txt  chroot.cpp  chroot.h
source/head/: CMakeLists.txt  head.cpp  head.h
source/mush/: CMakeLists.txt  command.cpp  command.h  commandParser.cpp  commandParser.h  main.cpp  mush.h  pipe.cpp  pipe.h
source/nl/: CMakeLists.txt  nl.cpp  nl.h
source/shared/: CMakeLists.txt  shared.h  utils.cpp  utils.h
source/standalone/chroot/: CMakeLists.txt  main.cpp
source/standalone/head/: CMakeLists.txt  main.cpp
source/standalone/nl/: CMakeLists.txt  main.cpp
